modal, icon-button, alerts & labels refactoring

--- a/src/components.html
+++ b/src/components.html
@@ -587,6 +587,129 @@
                         </div>
                     </div>
                 </section>
+                <!-- Modals -->
+                <section class="modals">
+                    <h2 class="section-heading">
+                        <span class="section-heading__number">14.</span>
+                        Modals
+                    </h2>
+                    <div class="modals__wrapper section-wrapper">
+                        <!-- Modal (basic) -->
+                        <div class="modals__item modal">
+                            <div class="modal__overlay"></div>
+                            <div class="modal__content">
+                                <button
+                                    class="
+                                        modal__close
+                                        icon-button icon-button--primary
+                                    "
+                                    aria-label="Modal close"
+                                >
+                                    <svg
+                                        class="icon-button__icon"
+                                        viewbox="0 0 24 24"
+                                        xmlns="http://www.w3.org/2000/svg"
+                                    >
+                                        <path
+                                            d="M5 5L19 19M5 19L19 5"
+                                            stroke-width="2"
+                                            stroke-linecap="round"
+                                            stroke-linejoin="round"
+                                        />
+                                    </svg>
+                                </button>
+                                <h2
+                                    class="
+                                        modal__heading
+                                        typography typography--h5
+                                    "
+                                >
+                                    Modal Title
+                                </h2>
+                                <p
+                                    class="
+                                        modal__text
+                                        typography typography--p1
+                                    "
+                                >
+                                    Left aligned contextual description for
+                                    modal.
+                                </p>
+                                <div class="modal__actions">
+                                    <button
+                                        class="
+                                            modal__action-button
+                                            button button--contained
+                                        "
+                                    >
+                                        Action
+                                    </button>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- Modal with actions -->
+                        <div class="modals__item modal modal--with-actions">
+                            <div class="modal__overlay"></div>
+                            <div class="modal__content">
+                                <button
+                                    class="
+                                        modal__close
+                                        icon-button icon-button--primary
+                                    "
+                                    aria-label="Modal close"
+                                >
+                                    <svg
+                                        class="icon-button__icon"
+                                        viewbox="0 0 24 24"
+                                        xmlns="http://www.w3.org/2000/svg"
+                                    >
+                                        <path
+                                            d="M5 5L19 19M5 19L19 5"
+                                            stroke-width="2"
+                                            stroke-linecap="round"
+                                            stroke-linejoin="round"
+                                        />
+                                    </svg>
+                                </button>
+                                <h2
+                                    class="
+                                        modal__heading
+                                        typography typography--h5
+                                    "
+                                >
+                                    Modal Title
+                                </h2>
+                                <p
+                                    class="
+                                        modal__text
+                                        typography typography--p1
+                                    "
+                                >
+                                    Left aligned contextual description for
+                                    modal.
+                                </p>
+                                <div class="modal__actions">
+                                    <button
+                                        class="
+                                            modal__action-button
+                                            button button--outlined
+                                        "
+                                    >
+                                        Cancel
+                                    </button>
+                                    <button
+                                        class="
+                                            modal__action-button
+                                            button button--contained
+                                        "
+                                    >
+                                        Action
+                                    </button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </section>
             </div>
         </main>
         <a
