--- a/src/components.html
+++ b/src/components.html
@@ -90,9 +90,7 @@
                                 <div
                                     class="
                                         flap__label
-                                        typography
-                                        typography--label
-                                        typography--secondary
+                                        typography typography--secondary
                                     "
                                 >
                                     Context Label
@@ -105,7 +103,7 @@
                                 >
                                     Hero Title
                                 </h3>
-                                <p class="flap__text typography typography--p1">
+                                <p class="flap__text typography">
                                     A quick supportive, and easy to understand
                                     catchphrase, slogan, tagline, or the
                                     punchline of the brand.
@@ -131,9 +129,7 @@
                                 <div
                                     class="
                                         flap__label
-                                        typography
-                                        typography--label
-                                        typography--secondary
+                                        typography typography--secondary
                                     "
                                 >
                                     Context Label
@@ -146,7 +142,7 @@
                                 >
                                     Hero Title
                                 </h3>
-                                <p class="flap__text typography typography--p1">
+                                <p class="flap__text typography">
                                     A quick supportive, and easy to understand
                                     catchphrase, slogan, tagline, or the
                                     punchline of the brand.
@@ -172,9 +168,7 @@
                                 <div
                                     class="
                                         flap__label
-                                        typography
-                                        typography--label
-                                        typography--secondary
+                                        typography typography--secondary
                                     "
                                 >
                                     Context Label
@@ -187,7 +181,7 @@
                                 >
                                     Hero Title
                                 </h3>
-                                <p class="flap__text typography typography--p1">
+                                <p class="flap__text typography">
                                     A quick supportive, and easy to understand
                                     catchphrase, slogan, tagline, or the
                                     punchline of the brand.
@@ -214,9 +208,7 @@
                                     <div
                                         class="
                                             flap__label
-                                            typography
-                                            typography--label
-                                            typography--secondary
+                                            typography typography--secondary
                                         "
                                     >
                                         Context Label
@@ -261,9 +253,7 @@
                                     <div
                                         class="
                                             flap__label
-                                            typography
-                                            typography--label
-                                            typography--secondary
+                                            typography typography--secondary
                                         "
                                     >
                                         Context Label
@@ -308,9 +298,7 @@
                                     <div
                                         class="
                                             flap__label
-                                            typography
-                                            typography--label
-                                            typography--secondary
+                                            typography typography--secondary
                                         "
                                     >
                                         Context Label
@@ -355,9 +343,7 @@
                                     <div
                                         class="
                                             flap__label
-                                            typography
-                                            typography--label
-                                            typography--secondary
+                                            typography typography--secondary
                                         "
                                     >
                                         Context Label
@@ -402,9 +388,7 @@
                                     <div
                                         class="
                                             flap__label
-                                            typography
-                                            typography--label
-                                            typography--secondary
+                                            typography typography--secondary
                                         "
                                     >
                                         Context Label
@@ -449,9 +433,7 @@
                                     <div
                                         class="
                                             flap__label
-                                            typography
-                                            typography--label
-                                            typography--secondary
+                                            typography typography--secondary
                                         "
                                     >
                                         Context Label
@@ -496,9 +478,7 @@
                                     <div
                                         class="
                                             flap__label
-                                            typography
-                                            typography--label
-                                            typography--secondary
+                                            typography typography--secondary
                                         "
                                     >
                                         Context Label
@@ -543,9 +523,7 @@
                                     <div
                                         class="
                                             flap__label
-                                            typography
-                                            typography--label
-                                            typography--secondary
+                                            typography typography--secondary
                                         "
                                     >
                                         Context Label
@@ -706,6 +684,132 @@
                                         Action
                                     </button>
                                 </div>
+                            </div>
+                        </div>
+                    </div>
+                </section>
+                <!-- Callouts -->
+                <section class="callouts">
+                    <h2 class="section-heading">
+                        <span class="section-heading__number">15.</span>
+                        Callouts
+                    </h2>
+                    <div class="callouts__wrapper section-wrapper">
+                        <!-- Callout bright (basic) -->
+                        <div class="callouts__item callout">
+                            <h2 class="callout__heading typography">
+                                Callout Title
+                            </h2>
+                            <p class="callout__text typography">
+                                Supportive text for the callout goes here like a
+                                pro, which informs and helps users decide what
+                                they should do next.
+                            </p>
+                            <div class="callout__actions">
+                                <button
+                                    class="
+                                        callout__action-button
+                                        button button--contained
+                                    "
+                                >
+                                    Action
+                                </button>
+                                <button
+                                    class="
+                                        callout__action-button
+                                        button button--outlined
+                                    "
+                                >
+                                    Action
+                                </button>
+                            </div>
+                        </div>
+                        <!-- Callout dark -->
+                        <div class="callouts__item callout callout--dark">
+                            <h2 class="callout__heading typography">
+                                Callout Title
+                            </h2>
+                            <p class="callout__text typography">
+                                Supportive text for the callout goes here like a
+                                pro, which informs and helps users decide what
+                                they should do next.
+                            </p>
+                            <div class="callout__actions">
+                                <button
+                                    class="
+                                        callout__action-button
+                                        button button--contained
+                                    "
+                                >
+                                    Action
+                                </button>
+                                <button
+                                    class="
+                                        callout__action-button
+                                        button button--outlined
+                                    "
+                                >
+                                    Action
+                                </button>
+                            </div>
+                        </div>
+                        <!-- Callout micro dark -->
+                        <div
+                            class="
+                                callouts__item
+                                callout callout--micro callout--dark
+                            "
+                        >
+                            <h2 class="callout__heading typography">
+                                Callout Title
+                            </h2>
+                            <p class="callout__text typography">
+                                Supportive text for the callout.
+                            </p>
+                            <div class="callout__actions">
+                                <button
+                                    class="
+                                        callout__action-button
+                                        button button--contained
+                                    "
+                                >
+                                    Action
+                                </button>
+                                <button
+                                    class="
+                                        callout__action-button
+                                        button button--outlined
+                                    "
+                                >
+                                    Action
+                                </button>
+                            </div>
+                        </div>
+                        <!-- Callout micro bright -->
+                        <div class="callouts__item callout callout--micro">
+                            <h2 class="callout__heading typography">
+                                Callout Title
+                            </h2>
+                            <p class="callout__text typography">
+                                Supportive text for the callout.
+                            </p>
+                            <div class="callout__actions">
+                                <button
+                                    class="
+                                        callout__action-button
+                                        button button--contained
+                                    "
+                                >
+                                    Action
+                                </button>
+                                <button
+                                    class="
+                                        callout__action-button
+                                        button button--outlined
+                                    "
+                                >
+                                    Action
+                                </button>
                             </div>
                         </div>
                     </div>
